--- a/Aug_15_2024/index.html
+++ b/Aug_15_2024/index.html
@@ -258,6 +258,7 @@
         <div class="content_section_text">
           <p>
                 Today I am learning about adding multiple pages to my website. You can visit the NEW! 'about' page of my webite <a href=about.html>✨here✨</a>
+		  and you can see the template for my new gentle blog <a href=blog.html>✨here✨</a>
 
           </p>
 <!--          <p>
